rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_distance_arc_origin.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch001 = sketch(on = XY) {
  arc1 = arc(
    start = [
      var -4.171778179166393mm,
      var -0.3887501068723105mm
    ],
    end = [
      var -3.5519659352803603mm,
      var 3.242100286306452mm
    ],
    center = [
      var -4.833070277052621mm,
      var 1.592465602324067mm
    ],
  )
  distance([arc1, ORIGIN]) == 3mm
}
