rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_distance_parallel_lines.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch(on = XY) {
  line1 = line(start = [var 0, var 0], end = [var 10, var 0])
  line2 = line(start = [var 0, var 5], end = [var 10, var 5])
  distance([line1, line2]) == 5mm
}

