rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_distance_point_arc.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch(on = XY) {
  point1 = point(at = [var 0, var 8])
  arc1 = arc(start = [var 5, var 0], end = [var 0, var 5], center = [var 0, var 0])
  distance([point1, arc1]) == 3mm
}

