rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_distance_two_points.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  point1 = point(at = [
    var 1.2928932308620271,
    var 2.2928932146019987
  ])
  point2 = point(at = [
    var 2.707106785398001,
    var 3.707106785398001
  ])
  distance([point1, point2]) == 2mm
}
