rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_edit_angle_constraint_label_position_with_call_on_right.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  line1 = line(
    start = [var 0mm, var 0.000006350855926191007mm],
    end = [
      var 4mm,
      var -0.000019052801873230305mm
    ],
  )
  line2 = line(
    start = [
      var 0.000005500180333781456mm,
      var -0.0000031756236087575933mm
    ],
    end = [
      var 1.9999834994871615mm,
      var 3.4640095267184248mm
    ],
  )
  60deg == angleDimension(lines = [line1, line2], sector = 1, labelPosition = [10mm, 11mm])
}
